# Logger

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
logger/: CMakeLists.txt
logger/include/: logger.h  logger_defs.h  logger_format.h  logger_utils.h
logger/src/: logger.cpp
test/: CMakeLists.txt  test.cpp
